Having an issue registering copycat_boiler

--- a/src/main/resources/assets/create_engine_deco/lang/en_us.json
+++ b/src/main/resources/assets/create_engine_deco/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-  "block.create_engine_deco.small_boiler": "Small Boiler"
+  "block.create_engine_deco.small_boiler": "Small Boiler",
+  "block.create_engine_deco.copycat_boiler": "Copycat Boiler"
 }
